# the-financial-document-retrieval-engine

./: .dockerignore  .env.example  .gitignore  AGENTS.md  Dockerfile  LICENSE  README.md  alembic.ini  app.py  docker-compose.yml  pyproject.toml  railway.toml
.github/workflows/: ci.yml  company-facts.yml  earnings-quality-sample.yml  ingest.yml  research50-backfill.yml  signal-study.yml  sp500-ingest.yml
apps/: __init__.py
apps/api/: __init__.py
apps/api/alembic/: env.py  script.py.mako
apps/api/app/: __init__.py  config.py  db.py  main.py
apps/api/tests/: test_answer.py  test_companies.py  test_health.py  test_migrations.py  test_models.py  test_operations.py  test_research_cache.py  test_research_signal_studies.py  test_search.py
apps/web/: .env.example  .gitignore  eslint.config.mjs  next.config.mjs  package-lock.json  package.json  playwright.config.ts  tsconfig.json
apps/web/app/: page.tsx  (+3 more)
data/: README.md
data/evals/: retrieval_benchmark.jsonl
data/sample/: listed_companies.json  sec_filing.html  sp500_tickers.json
docs/: architecture.md  codex_plan.md  data_model.md  demo_script.md  eval_plan.md  eval_results.md  neon-migration.md  resume_bullets.md
scripts/: __init__.py  benchmark_ann_recall.py  benchmark_answer.py  benchmark_latency.py  benchmark_retrieval.py  build_listed_company_seeds.py  build_reviewed_benchmark.py  build_sp500_tickers.py  download_filings.py  eval_guard.py  ingest_company_facts_batch.py  ingest_sec_sample.py  ingest_ticker_batch.py  ingestion_lock.py  mark_stale_ingestion_runs.py  refine_benchmark_questions.py  refresh_research_console_metrics.py  reground_benchmark_evidence.py  remediate_unchunked.py  retrieval_pipeline.py  start.sh
(+71 files in other folders)
