[build-system]
requires = ["setuptools>=69", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "fdre"
version = "0.1.0"
description = "Financial Document Retrieval Engine for layout-aware SEC filing search and citation verification."
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
  "alembic>=1.13",
  "beautifulsoup4>=4.12",
  "fastapi>=0.111",
  "httpx>=0.27",
  "langgraph>=0.2",
  "lxml>=5.0",
  "pgvector>=0.4",
  "psycopg[binary]>=3.1",
  "pydantic>=2.7",
  "pydantic-settings>=2.3",
  "sqlalchemy>=2.0",
  "uvicorn[standard]>=0.30",
]

[project.optional-dependencies]
dev = [
  "mypy>=1.10",
  "pytest>=8.2",
  "pytest-asyncio>=0.23",
  "respx>=0.21",
  "ruff>=0.5",
]
data = [
  "numpy>=1.26",
  "pandas>=2.2",
  "polars>=0.20",
  "pyarrow>=15.0",
]
embeddings = [
  "openai>=1.30",
]
docling = [
  "docling>=2.0",
]
opensearch = [
  "opensearch-py>=2.6",
]

[tool.setuptools.packages.find]
where = ["packages/fdre", "."]
include = ["fdre*", "apps*"]

[tool.pytest.ini_options]
testpaths = [
  "apps/api/tests",
  "packages/fdre/tests",
]
pythonpath = [
  ".",
  "packages/fdre",
]

[tool.ruff]
line-length = 100
target-version = "py311"
src = ["apps", "packages/fdre", "scripts"]

[tool.ruff.lint]
select = ["E", "F", "I", "N", "UP", "B", "A", "C4", "SIM", "RUF"]
ignore = []

[tool.ruff.lint.isort]
known-first-party = ["apps", "fdre"]

[tool.mypy]
python_version = "3.11"
files = ["apps/api/app", "packages/fdre/fdre"]
strict = true
warn_unused_ignores = true
warn_redundant_casts = true
disallow_any_generics = false
ignore_missing_imports = true
